--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -10,11 +10,9 @@
 	  <li class="nav-item tabNav">
 	    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability</span>
 	  </li>
-	  <!--  
-	  <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('flaggedAsUnavailable')">Flagged</span>
+	<li class="nav-item tabNav">
+	    <span class="nav-link" (click)="switchTab('skillValidation')">Skills</span>
 	  </li>
-	  -->
 	   <li class="nav-item tabNav">
 	    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription</span>
 	  </li>
@@ -216,6 +214,36 @@
 			</table>
 		</div>
 		
+	</div>
+	
+	<!-- Skills table -->
+	<div *ngIf="showSkillsValidationTab">
+	
+	
+		<table class="table candidate-table availability">
+			
+			<thead>
+      			<tr>
+      				<th class="bg-tab-hdr">Skill</th>
+      				<th class="bg-tab-hdr">Actions</th>
+      		     </tr>
+      		</thead>
+      		<tbody>
+      			<tr style="padding-bottom:20px; border-bottom:2px black solid;border-top:2px black solid;">
+	      			<td><b>Pending:</b> {{skillsToValidate.length}}</td>
+	      			<td><button	class="control-spacing btn btn-secondary btn-action" style="float:right;" (click)="persistValidatedSkills()">Update</button></td>
+	      		</tr>
+	      		<tr *ngFor="let skill of skillsToValidate">
+	      			<td *ngIf="skill.validationStatus == 'PENDING'">{{skill.skill}}</td>
+	      			<td *ngIf="skill.validationStatus == 'ACCEPTED'" class="skillAccepted">{{skill.skill}}</td>
+	      			<td *ngIf="skill.validationStatus == 'REJECTED'" class="skillRejected">{{skill.skill}}</td>
+	      			<td>
+	      				<button	class="control-spacing btn btn-secondary btn-action" (click)="updateSkillValidationStatus(skill.skill, 'ACCEPTED')">Accept</button>
+	      				<button	class="control-spacing btn btn-secondary btn-action" (click)="updateSkillValidationStatus(skill.skill, 'REJECTED')">Reject</button>
+	      			</td>
+	      		</tr>
+	      	</tbody>
+		</table>
 	</div>
 	 
 	<!-- Subscriptions requiring actions -->
