FE public pages

--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -4,6 +4,10 @@
         	<form [formGroup]="formBean">
 				<div class="wholepagerow">
 					<h3>Register As Candidate</h3>
+					<p class="creat-candidate-intro">
+					The recruiters, IT agencies and Hiring Managers are all independent of the Arenella-ICT platform, making Arenella-ICT a one stop shop for reaching a whole 
+					network of new opportunities. By uploading your CV and creating your profile you are gaining access to this network of new possibilities.
+					</p>
 					<div class="div-spacing">
 						<p style="border-bottom:2px solid black;">Curriculum</p>
 						<input type="file" (change)="uploadCurriculumFile($event)">
