--- a/recruit-gui/src/app/faq/faq.component.css
+++ b/recruit-gui/src/app/faq/faq.component.css
@@ -11,12 +11,27 @@ centerdiv{
 }
 
 .faqs{
+	width:80%;
 	margin-top:20px;
 	margin-left:10%;
 	margin-right:10%;
 	margin-bottom:50px;
+	
 }
 
 .faq h3{
 	color:black;
+}
+
+.subject-header{
+	width:100%;
+	padding:20px;
+	border-bottom:grey;
+	margin-bottom:10px;
+	text-align:center;
+	 
+}
+
+.aboutpage h5{
+	color:grey;
 }
