--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -1,101 +1,33 @@
 <div>
-    <div class="centerdiv">
+    <div class="centerdiv aboutpage">
         <div class="center-table">
             <div class="row">
-            	 <div class="col">
-            	 	<h3>What is Arenella-ICT</h3>
-            	 	<p>
-            	 	Arenella is a platorm for recruiters to connect with available IT candidates. Via Arenella recruiters can search on and download the CVs and contact details of available 
-            	 	IT candidates. Recruiters using Arenella can also place job adverts to connect with candidates not currently in the system
+            	 <div>
+            	 	<div  class="subject-header">
+            	 		<h1>Welcome to Arenella-ICT</h1>
+            	 		<h5>IT Candidate CV Database - IT Job board - IT Marketplace</h5>
+            	 	</div>
+            	 	<div>
+            	 		<img class="about-office-img" src="/assets/img/office-img.jpeg" alt="image" class="main-img">
+            	 	</div>
+           	 	 	<p>
+            	 	Arenella-ICT is a platform designed to bring together IT candidates which are actively looking for their next role, with the IT recruiters and hiring manager that 
+            	 	are looking to place them. 
             	 	</p>
-            	 	<h3>How many IT candidates are available</h3>
-            	 	<p>At present there are {{totalNumberActiveCandidates}} IT candidates available in the CV database.</p>
-            	 	<h3>Our background in IT</h3>
             	 	<p>
-            	 	Having spent over 23 years working in the IT sector we have extensive knowledge of the IT markets in which we work. Since 2021 Arenella has turned its 
-            	 	attention to sourcing of candidates for the IT recruitment sector.
+            	 	Arenella-ICT is however much more. It is also a meeting place to promote recruiter to recruiter collaboration by providing the opportunity to 
+            	 	work together to source and fill roles. We provide the tooling necessary to assist you with this collaboration.
             	 	</p>
-            	 </div>
-                <div class="col">
-                
-                    <h2>  IT candidate CV database</h2>
-                    <p>
-                    	The IT candidate CV database is one of the main features of the site. We actively search for available IT candidates and with their permission add their CV and profile into the 
-                    	system. As a recruiter you can filter on your exact requirements and download the CVs of suitable candidates.
-                    </p>
-                    <div>
-                    	We source both contract and permanent IT candidates for the following locations
-                    	<ul>
-                    		<li>Belgium</li>
-                    		<li>The Netherlands</li>
-                    		<li>The Republic Of Ireland</li>
-                    		<li>The United Kingdom</li>
-                    	</ul>
-                    </div>
-                    <p>
-                        All candidates are local, hand picked and either native or have valid work visas.
-                    </p>
-                    <p>
-                        Our ICT candidates speak diverse languages, including Dutch, English and French
-                    </p>
-                    
-                </div>
-                <div class="col">
-                	<h3>Types of available IT candidates</h3>
-                	<div class="row">
-                   		<div class="col">
-                            <ul class="skill">
-                             <li>Java Developers</li>
-                             <li>C# Developers</li>
-                             <li>.Net Developers</li>
-                             <li>Web Developers</li>
-                             <li>Business Analysts</li>
-                             <li>Project Managers</li>
-                          </ul>
-                        </div>
-                        <div class="col">
-                            <ul class="skill">
-                                <li>UI\UX specialists</li>
-                                <li>Enterprise Architects</li>
-                                <li>Solution Architects</li>
-                                <li>Network Engineers</li>
-                                <li>QA Test engineers</li>
-                                <li>IT Recruiters</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="row">
-	               		<div class="col">
-	               			<h3>Features</h3>
-	               			<table>
-	               				<tr>
-	               					<th><b>CV database</b></th>
-	               					<td>Search on and download CVs of immediately available IT candidates</td>
-	               				</tr>
-	               				<tr>
-	               					<th><b>Job Board</b></th>
-	               					<td>Place Job advert's to reach unregistered candidates</td>
-	               				</tr>
-	               				<tr>
-	               					<th><b>Marketplace</b></th>
-	               					<td>Collaborate with other recruiters to source / place candidates</td>
-	               				</tr>
-	               				<tr>
-	               					<th><b>Email Alerts</b></th>
-	               					<td>Receive notifications when selected types of candidates are added</td>
-	               				</tr>
-	               			</table>
-	               		</div>
-               		 </div>
-                    <div class="row">
-	               		<div class="col">
-	               			<h3>Questions</h3>
-	               			<p>Please feel free to email any further questions you may have to kparkings&#64;gmail.com</p>
-	               		</div>
-               		 </div>
-                </div>
-                
-            </div>
+            	 	<p>
+            	 	The site has been developed and refined to automate the tasks you undertake as much as possible. Be that searching for Candidate CVs to download or advertising 
+            	 	an open role you are trying to fill. The site employs algorithm and automation techniques to save you time to facilitate you in quickly reaching your goals.
+            	 	</p>
+            	 	<p>
+            	 	Arenella-ICT currently focuses on IT Candidates based in the Netherlands, Belgium, the UK and Ireland. The candidates we make available are both based in and have 
+            	 	the right to work in one of these locations. 
+            	 	</p>
+            	</div>
+	        </div>
         </div>
     </div>
 </div>
