--- a/recruit-gui/src/app/faq/faq.component.html
+++ b/recruit-gui/src/app/faq/faq.component.html
@@ -1,91 +1,105 @@
-<div class="faqs">
-	<div class="faq">
-		<h3>Is the trial completely free</h3>
-		<p>
-			The 30 day trial is completely free. You have full access to the features of the site. There are no hidden costs or margins. You can place as many
-			candidates as you like during the trial and there are no costs involved
-		</p>
-    </div>
-    <div class="faq">
-		<h3>What happens at the end of the 30 day trial period</h3>
-		<p>
-			At the end of the 30 day trial your account switches to a credit based system. You can still access the site and perform the same functions until 
-			you run out of credits. You will receive new credits each week. 
-		</p>
+<div>
+    <div class="centerdiv aboutpage">
+        <div class="center-table">
+            <div class="row">
+            	 <div>
+            	 	<div  class="subject-header">
+            	 		<h1>FAQ's</h1>
+            	 		<h5>IT Candidate CV Database - IT Job board - IT Marketplace</h5>
+            	 	</div>
+            	 	<div class="faqs">
+	            	 	<div class="faq">
+							<h3>Is the trial completely free</h3>
+							<p>
+								The 30 day trial is completely free. You have full access to the features of the site. There are no hidden costs or margins. You can place as many
+								candidates as you like during the trial and there are no costs involved
+							</p>
+					    </div>
+					    <div class="faq">
+							<h3>What happens at the end of the 30 day trial period</h3>
+							<p>
+								At the end of the 30 day trial your account switches to a credit based system. You can still access the site and perform the same functions until 
+								you run out of credits. You will receive new credits each week. 
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Can I use the site after the 30 day free trial</h3>
+							<p>
+								Yes. You can either continue to use the system for free using credit based access. Once you run out of credits you will have to wait until you are asgined new
+								credits the following week to carry out certain function. You can also opt for a subscription, you will then have unlimited access to the site for the duration of 
+								the subscription
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Are there additional costs</h3>
+							<p>
+								No. The only cost is the subscription you choose if you choose for non credit based access. You have full access to the site all the time you have a subscription. There are no margins or hidden fees
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Where will the invoice for the annual subscription come from</h3>
+							<p>
+								The invoice is sent from Arenella BV a Dutch registered company in the Netherlands
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Can I contact the candidates directly</h3>
+							<p>
+								Yes. When you view / download the candidates CV you will see their contact details. You can call them directly
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Do candidates know their details are being shared</h3>
+							<p>
+								Yes. All candidates have either uploaded their CVs themselves via the site with the intention of having them downloaded by recruiters who will call them or have 
+								given permission to have them uploaded on their behalf for the same reason. We do not add any CV that has not been expressly provided to us for this purpose
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Are the candidates actually available</h3>
+							<p>
+								Yes. Candidates availability is checked based upon their LinkedIn status roughly every two weeks. Providing their statuses are up to date the majority of candidates 
+								are actively looking for a new role
+							</p>
+						</div>
+						<div class="faq">
+							<h3>What countries are the candidates located in</h3>
+							<p>
+								There are candidates available in the following countries
+							</p>
+							<ul>
+								<li>The Netherlands</li>
+								<li>Belgium</li>
+								<li>United Kingdom</li>
+								<li>The Republic Of Ireland</li>
+							</ul>
+							<p>
+							You can filter on candidates that speak the language you are looking for
+							</p>
+						</div>
+						<div class="faq">
+							<h3>Are the candidates local</h3>
+							<p>
+								Yes. The candidates are living in the county where they are looking for work and are either nationals of that country or have a valid work visa.
+							</p>
+						</div>
+						<div class="faq">
+							<h3>What languages do the candidates speak</h3>
+							<p>
+								When a candidate is registered we make a note of their ability with the following languages
+							</p>
+							<ul>
+								<li>English</li>
+								<li>Dutch</li>
+								<li>French</li>
+							</ul>
+							<p>
+							You can filter on candidates that speak the language you are looking for
+							</p>
+						</div>
+					</div>
+            	 </div>	
+			</div>
+		</div>
 	</div>
-	<div class="faq">
-		<h3>Can I use the site after the 30 day free trial</h3>
-		<p>
-			Yes. You can either continue to use the system for free using credit based access. Once you run out of credits you will have to wait until you are asgined new
-			credits the following week to carry out certain function. You can also opt for a subscription, you will then have unlimited access to the site for the duration of 
-			the subscription
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Are there additional costs</h3>
-		<p>
-			No. The only cost is the subscription you choose if you choose for non credit based access. You have full access to the site all the time you have a subscription. There are no margins or hidden fees
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Where will the invoice for the annual subscription come from</h3>
-		<p>
-			The invoice is sent from Arenella BV a Dutch registered company in the Netherlands
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Can I contact the candidates directly</h3>
-		<p>
-			Yes. When you view / download the candidates CV you will see their contact details. You can call them directly
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Do candidates know their details are being shared</h3>
-		<p>
-			Yes. All candidates have either uploaded their CVs themselves via the site with the intention of having them downloaded by recruiters who will call them or have 
-			given permission to have them uploaded on their behalf for the same reason. We do not add any CV that has not been expressly provided to us for this purpose
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Are the candidates actually available</h3>
-		<p>
-			Yes. Candidates availability is checked based upon their LinkedIn status roughly every two weeks. Providing their statuses are up to date the majority of candidates 
-			are actively looking for a new role
-		</p>
-	</div>
-	<div class="faq">
-		<h3>What countries are the candidates located in</h3>
-		<p>
-			There are candidates available in the following countries
-		</p>
-		<ul>
-			<li>The Netherlands</li>
-			<li>Belgium</li>
-			<li>United Kingdom</li>
-			<li>The Republic Of Ireland</li>
-		</ul>
-		<p>
-		You can filter on candidates that speak the language you are looking for
-		</p>
-	</div>
-	<div class="faq">
-		<h3>Are the candidates local</h3>
-		<p>
-			Yes. The candidates are living in the county where they are looking for work and are either nationals of that country or have a valid work visa.
-		</p>
-	</div>
-	<div class="faq">
-		<h3>What languages do the candidates speak</h3>
-		<p>
-			When a candidate is registered we make a note of their ability with the following languages
-		</p>
-		<ul>
-			<li>English</li>
-			<li>Dutch</li>
-			<li>French</li>
-		</ul>
-		<p>
-		You can filter on candidates that speak the language you are looking for
-		</p>
-	</div>
-</div>	
+</div>
