--- a/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
+++ b/recruit-gui/src/app/recruiter-signup/recruiter-signup.component.html
@@ -8,7 +8,7 @@
             	</div>
             	
             	<div style="margin-top:40px;">
-	            	<div style="float:left;margin-right:30px"> 
+	            	<div style="float:left;margin-right:30px;margin-bottom:50px;"> 
 						<form [formGroup]="signupForm">
 							<table>
 							<tr>
@@ -55,9 +55,9 @@
 						</form>
 					</div>
 					
-					<div class="rec-signup-info"  style="float:left;margin-right:30px;">
-					<div>
-						<b>Free trial</b>
+					<div class="rec-signup-info"  style="float:left;margin-right:30px">
+					<div style="margin-bottom:40px;">
+						<h5>Free trial</h5>
 						<p>
 						Sign up for a no obligation free trial. During the trial you can download unlimited candidate CVs, Create unlimited posts on the job board and unlimited requests 
 						for candidates from other recruitment agencies in the Marketplace.
@@ -65,7 +65,7 @@
 					</div>
 					
 					<div>
-						<b>Free and paid subscriptions</b>
+						<h5>Free and paid subscriptions</h5>
 						<p>
 						The site generates revenue based upon a subscription model. After your 30 day trial ends, the next time you login you will be able to choose from either a 
 						Free subscription with limited weekly downloads, job board posts and marketplace requests or for just 120 euro's per year excluding Tax you 
