FE Refactr Recruiter Listings

--- a/recruit-gui/src/styles.css
+++ b/recruit-gui/src/styles.css
@@ -205,5 +205,10 @@ dialog {
 	margin-bottom:30px;
 }
 
+.arenella-page{
+	margin-left:30px;
+	margin-right:30px;
+}
+
 
 /*Left right panes - stat*/
