--- a/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
+++ b/recruit-gui/src/app/recruiter-listings/recruiter-listings.component.css
@@ -33,10 +33,6 @@
     min-width:85px;
 }
 
-.a-table-cell{
-	display:table-cell; 
-}
-
 .text-area-listing{
 	height:260px;
 	width:100%;
@@ -85,28 +81,6 @@
     text-align:left;
 }
 
-.feedback-success{
-    background: #F0F0F0;
-}
-
-.feedbackBox{
-    width:300px;
-    height:500px;
-}
-
-.modal-header-text{
-    text-align:center;
-    color:#6f42c1;
-    margin-top:10px;
-    width:500px;
-    
-}
-
-.feedbackBox{
-    width:200px;
-    height:350px;
-}
-
 .filter-close-box{
      padding:10px;
      cursor:pointer;
@@ -122,15 +96,7 @@
 	width:100%;
 }
 
-.listing-tab-col{
-    border:1px black solid;
-    background-color: #ffffff;
-    font-size: x-small;
-    text-align: center;
-    padding: 5px;
-}
-
-.bg-tab-hdr{
+.listing-table thead tr th{
 	border:1px black solid;
 	background: #6c757d;
     color: #ffffff;
@@ -142,6 +108,14 @@
     padding-left:5px;
     padding-right:5px;
     min-width:50px;
+}
+
+.listing-table tbody tr td{
+	border:1px black solid;
+    background-color: #ffffff;
+    font-size: x-small;
+    text-align: center;
+    padding: 5px;
 }
 
 .action-buttons{
@@ -193,74 +167,6 @@
     text-align: center;
     padding-top:12px;
     padding-left:11px;
-}
-
-.recommendation-download{
-    font-size: large;
-    height:295px;
-    text-align: center;
-    padding-top:12px;
-    padding-left:11px;
-}
-
-.recommendation{
-	float:left;
-	margin-left:15px;
-	border:1px solid black;
-	padding:10px;
-	width:100px;
-	height:100px;
-	margin-bottom:10px;
-	cursor:pointer;
-}
-
-.recommendation:hover{
-	background:#E8E8E8;
-} 
-
-.recommendation-download{
-	text-align:center;
-	margin-top:10px;
-}
-
-a {
-    color: green;
-    text-decoration: none;
-    background-color: transparent;
-}
-
-.perception-perfect{
-	background:green;
-	width:100%;	
-}
-
-.perception-excellent{
-	background:green;
-	width:90%;
-}
-
-.perception-good{
-	background:green;
-	width:75%;
-}
-
-
-.perception-average{
-	background:orange;
-	width:60%;
-}
-
-.perception-poor{
-	background:red;
-	width:25%;
-}
-
-.suggestion-buttons{
-	margin-top:20px;
-	padding-top:5px;
-	border-top:1px solid black;
-	width:100%;
-	text-align:right;
 }
 
 .suggestion-button{
@@ -325,4 +231,8 @@ a {
 
 textarea {
     width:100%;
+}
+
+.recruiter-listing-main-text{
+	text-align:center;
 }
